fix: fix timeline alignment

--- a/src/components/Timeline.css
+++ b/src/components/Timeline.css
@@ -17,17 +17,19 @@
 .timeline-item {
     display: flex;
     justify-content: flex-end;
-    padding-right: 30px;
+    margin-right: 30px;
     position: relative;
     margin: 10px 0;
     width: 50%;
+    right: 27px;
 }
 
 .timeline-item:nth-child(odd) {
     align-self: flex-end;
     justify-content: flex-start;
-    padding-left: 30px;
-    padding-right: 0;
+    margin-left: 30px;
+    margin-right: 0;
+    left: 27px;
 }
 
 .timeline-item-content {
